--- a/taskerApp/.flowconfig
+++ b/taskerApp/.flowconfig
@@ -1,6 +1,7 @@
 [ignore]
 ; We fork some components by platform
 .*/*[.]android.js
+.*/node_modules/.*
 
 ; Ignore templates for 'react-native init'
 <PROJECT_ROOT>/node_modules/react-native/local-cli/templates/.*
