--- a/taskerApp/package.json
+++ b/taskerApp/package.json
@@ -6,6 +6,7 @@
     "flow-bin": "^0.56.0",
     "jest-expo": "25.0.0",
     "react-native-scripts": "1.11.1",
+    "react-navigation": "^1.5.8",
     "react-redux": "^5.0.7",
     "react-test-renderer": "16.2.0",
     "redux-logger": "^3.0.6",
